# daxo_os

./: Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
src/: allocator.rs  ata.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  syscall.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
verification/: FrameVerify.lean  README.md  lakefile.lean
