[package]
name = "daxo_os"
version = "0.1.0"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]
edition = "2024"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
# Fix the version and enable physical memory mapping
bootloader = { version = "=0.9.33", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
uart_16550 = "0.6.0"
x86_64 = "0.14.2"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"
conquer-once = { version = "0.2.0", default-features = false }
crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.4", default-features = false, features = ["alloc"] }

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[[bin]]
name = "daxo_os"
test = true
bench = false

# Configuring the bootimage builder and QEMU parameters
[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33

# Explicitly set the ide interface for disk.bin
run-args = [
    "-serial", "stdio",
    "-drive", "file=disk.bin,format=raw,if=ide,bus=0,unit=1"
]
